2 sections completed and styled in 2h 30min

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="topcontainer">
         <div class="sign-up-container">
             <div class="topconmaintext">This website is awesome!</div>
-            <div class="topconsubtext">Welcome to my wonderful and amazing landing page,you can see the links in the heder will link you to my GitHubpage, my Blog which I update after I spend time on the Odin Project and try to explain to myself and the reader what I have been up to, and finally an extra page about lil old me!</div>
+            <div class="topconsubtext">Welcome to my wonderful and amazing landing page,you can see the links in the heder will link you to my GitHubpage, my Blog which I update after I spend time on the Odin Project and try to explain to myself and the reader what I have been up to, and finally an extra page about lil old me! To the right you can see my cat Luna trying to fight me for not being a full web dev yet so please help save me from her with any comments or feedback you have!</div>
             <div>
                <button>Sign up</button> 
             </div>
