Section 2 added and styled, text needed, Total time: 3h 10min

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>About Me</li>
         </ul>
     </div>
-    <div class="topcontainer">
+    <div class="sectionone">
         <div class="sign-up-container">
             <div class="topconmaintext">This website is awesome!</div>
             <div class="topconsubtext">Welcome to my wonderful and amazing landing page,you can see the links in the heder will link you to my GitHubpage, my Blog which I update after I spend time on the Odin Project and try to explain to myself and the reader what I have been up to, and finally an extra page about lil old me! To the right you can see my cat Luna trying to fight me for not being a full web dev yet so please help save me from her with any comments or feedback you have!</div>
@@ -32,8 +32,30 @@
             </div>
         </div>
         <div >
-            <img class="image" src="jpg/PXL_20211214_192631917.MP.jpg" rel="a picture of a cat reaching through a over turned washing basket handle showing claws">
+            <img class="image" src="jpg/lunabasket.jpg" rel="a picture of a cat reaching through a over turned washing basket handle showing claws">
         </div>        
+    </div>
+    <div class="sectiontwo">
+        <p>Some Random Infomation</p>
+        <div class="sectwocon">
+            <div>
+                <img class="boximage" src="jpg/lunacattree.jpg" alt="a picture of a british shot hair cat sat in a cat tree">
+                <div class="imgtext">Picture 1</div>
+            </div>
+            <div>
+                <img class="boximage" src="jpg/lunachair.jpg" alt="a picture of a british shorthair curled up on my chair">
+                <div class="imgtext">Picture 2</div>
+            </div>
+            <div>
+                <img class="boximage" src="jpg/lunafloor.jpg" alt="a picture of a british shorthair on their back exposing their fluffy belly">
+                <div></div>
+                <div class="imgtext">Picture 3</div>
+            </div>
+            <div>
+                <img class="boximage" src="jpg/lunawindow.jpg" alt="a picture of a british shorthair on a windowsill back lit by a sunset">
+                <div class="imgtext">Picture 3</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
