section two styled and completed, section three added, partially styled.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../landing-page/CSS/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
     <div class="header">
@@ -36,24 +36,30 @@
         </div>        
     </div>
     <div class="sectiontwo">
-        <p>Some Random Infomation</p>
+        <p class="sectwotext">Look at my beautiful cat!</p>
         <div class="sectwocon">
-            <div>
+            <div class="imgcon">
                 <img class="boximage" src="jpg/lunacattree.jpg" alt="a picture of a british shot hair cat sat in a cat tree">
-                <div class="imgtext">Picture 1</div>
-            </div>
-            <div>
                 <img class="boximage" src="jpg/lunachair.jpg" alt="a picture of a british shorthair curled up on my chair">
-                <div class="imgtext">Picture 2</div>
-            </div>
-            <div>
                 <img class="boximage" src="jpg/lunafloor.jpg" alt="a picture of a british shorthair on their back exposing their fluffy belly">
-                <div></div>
-                <div class="imgtext">Picture 3</div>
-            </div>
-            <div>
                 <img class="boximage" src="jpg/lunawindow.jpg" alt="a picture of a british shorthair on a windowsill back lit by a sunset">
-                <div class="imgtext">Picture 3</div>
+            </div>
+            <div class="textcon">
+                <div class="imgtext">This is Luna on her new cat tree, she is really cute and fluffy and enjoys dreamies cat treats. </div>
+                <div class="imgtext">This is her on my old office chair, she enjoys to take my things. One day I'm scared she'll try and take my place.</div>
+                
+                <div class="imgtext">What I need to do is become a really good web developer and change career so that I can buy her all the toys and treats in the world.</div>
+                <div class="imgtext">Even when I have bought her all the soft cozy beds, the delicious cat food and treats I don't think she'll be truley satisfied, she has her eyes set on galactic domination i'm sure!</div>
+            </div>
+        </div>
+    </div>
+    <div class="sectionthree">
+        <div class="secthreetext">
+            <div class="quote">
+                <p>This is an insipring quote ir testimonial from a customer. Maybe it's jst filling spaceup, or maybe people will acctually read this . who knows? All I know is that it looks nice.</p>
+            </div>
+            <div class="name">
+                <p>-Thor, God of Thunder</p>
             </div>
         </div>
     </div>
