Section three finished and section 4 added styling partially finished

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
@@ -56,10 +56,19 @@
     <div class="sectionthree">
         <div class="secthreetext">
             <div class="quote">
-                <p>This is an insipring quote ir testimonial from a customer. Maybe it's jst filling spaceup, or maybe people will acctually read this . who knows? All I know is that it looks nice.</p>
+                <p>Only if they are worthy may they weild the might of Mjollnir. Although if it's the Hulk I think they might be angry enough that it doesn't matter... I should really ask father about this to get some answers but you know how he is!</p>
             </div>
             <div class="name">
                 <p>-Thor, God of Thunder</p>
+            </div>
+        </div>
+    </div>
+    <div class="sectionfour">
+        <div class="secfourcon">
+            <div>
+                <p>Call to action it's time!</p>
+                <p>Sign up for our products by clicking that button right over there!</p>
+                <button>Sign up</button>
             </div>
         </div>
     </div>
