5 hours later all styled, about page added, very happy!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="https://github.com/IsaacWild" target="_blank" rel="noopener noreferrer">My Work</a></li>
             <li><a href="https://myodinjourney.blogspot.com/" target="_blank" rel="noopener noreferrer">My Blog</a></li>
-            <li>About Me</li>
+            <li><a href="/pages/aboutme.html" target="_blank" rel="noopener noreferrer">About Me</a></li>
         </ul>
     </div>
     <div class="sectionone">
@@ -65,12 +65,15 @@
     </div>
     <div class="sectionfour">
         <div class="secfourcon">
-            <div>
-                <p>Call to action it's time!</p>
-                <p>Sign up for our products by clicking that button right over there!</p>
-                <button>Sign up</button>
+            <div class="secfourlabel">
+                <div class="secfourtext">Call to action! It's time!</div>
+                <div class="secfoursubtext">Sign up for our products by clicking that button right over there!</div>
             </div>
+            <button class="secfourbutton">Sign up</button>
         </div>
+    </div>
+    <div class="footer">
+        Copyright © Me a.k.a IsaacWild 2022
     </div>
 </body>
 </html>
