changed about me to not open in new tab and fixed css link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="https://github.com/IsaacWild" target="_blank" rel="noopener noreferrer">My Work</a></li>
             <li><a href="https://myodinjourney.blogspot.com/" target="_blank" rel="noopener noreferrer">My Blog</a></li>
-            <li><a href="/pages/aboutme.html" target="_blank" rel="noopener noreferrer">About Me</a></li>
+            <li><a href="/pages/aboutme.html">About Me</a></li>
         </ul>
     </div>
     <div class="sectionone">
